# Distill-CLI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.py  pyproject.toml  requirements.txt  setup.py
distill/: __init__.py  core.py
examples/: git_diff_example.py
tests/: __init__.py
