[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distill-cli"
version = "0.1.0"
description = "Compress CLI output for LLM consumption"
readme = "README.md"
license = {"text = "MIT"}
authors = [
    {name = "Karan Singh", email = "karansingh25822@gmail.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]